# Full-stack-note-app

./: README.md
note_f/: README.md  pubspec.yaml
note_f/android/app/: build.gradle
note_f/android/app/src/main/: AndroidManifest.xml
note_f/android/app/src/main/kotlin/com/example/note_f/: MainActivity.kt
note_f/ios/Runner/: Info.plist
note_f/ios/Runner.xcodeproj/: project.pbxproj
note_f/lib/: create_note_page.dart  main.dart  notes_page.dart  registration_page.dart
note_f/lib/api/: api.dart
note_f/lib/bloc/auth_bloc/: auth_bloc.dart  auth_event.dart  auth_state.dart
note_f/lib/bloc/bloc/: note_bloc.dart  note_event.dart  note_state.dart
note_f/lib/editor/: desktop_editor.dart  editor.dart  mobile_ditor.dart
note_f/lib/model/: api_key.dart  note.dart
note_f/linux/: CMakeLists.txt  my_application.cc
note_f/macos/Flutter/: GeneratedPluginRegistrant.swift
note_f/macos/Runner.xcodeproj/: project.pbxproj
note_f/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
note_f/macos/Runner/Configs/: AppInfo.xcconfig
note_f/test/: widget_test.dart
note_f/web/: index.html  manifest.json
note_f/windows/: CMakeLists.txt
note_f/windows/runner/: Runner.rc  main.cpp
notes_b/: Cargo.toml
notes_b/migrations/: 0001_notes_table.sql
notes_b/src/: main.rs
