[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "uuid",
    "chrono",
] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.6.1", features = ["v4"] }
validator = { version = "0.16.1", features = ["derive"] }
